# Health_Clinic_Management

./: CMakeLists.txt  Health_Clinic_Management.cpp  README.md  main.cpp  medicine.db  umlScript.md  vcpkg.json
Health_Clinic_Management/: CMakeLists.txt  Health_Clinic_Management.cpp  Health_Clinic_Management.sln  Health_Clinic_Management.vcxproj  Health_Clinic_Management.vcxproj.filters  vcpkg.json
Health_Clinic_Management/x64/Debug/: Health_Clinic_Management.exe.recipe  Health_Clinic_Management.ilk  Health_Clinic_Management.vcxproj.FileListAbsolute.txt  vc143.idb
Health_Clinic_Management/x64/Debug/Health_C.4df1ba90.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Health_Clinic_Management.lastbuildstate  Health_Clinic_Management.write.1u.tlog  VcpkgInstallManifestx64-windows.read.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
slides/: FU_LI_Project2.1.pptx  FU_LI_Project2.2.pptx  FU_LI_Project2.3.pptx  FU_LI_Project2.4.pptx
